# finsumeval

./: .env  .gitignore  README.md  main.py  ngram_extraction_results.jsonl  ngram_extraction_results_idx.jsonl  pyproject.toml
metric/: sumeval.py  tokenizer.py
metric/evaluators/: base.py  ldfacts.py  schemas.py  sentence_models_registry.py  sumeval.py  utils.py
metric/extractors/: base.py  ngram.py  schemas.py
metric/tokenizers/: base.py  models_registry.py  tokenizer.py
